# aurora-os

./: .gitignore  ADVANCED_FEATURES_SUMMARY.md  ANDROID_VM_IMPLEMENTATION_SUMMARY.md  AURORA_LINUX_KERNEL_IMPLEMENTATION.md  AURORA_VM_GITHUB_ISSUES.md  BETA_TESTING_GUIDE.md  CMakeLists.txt  DESKTOP_IMPROVEMENTS_SUMMARY.md  DOCUMENTATION_INDEX.md  ENHANCED_5D_RENDERING.md  ENHANCEMENT_SUMMARY.md  FEATURES.md  FEATURE_COMPLETION_REPORT.md  FEATURE_USAGE_GUIDE.md  FONT_DESKTOP_IMPLEMENTATION_SUMMARY.md  GUI_ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_3D_4D_5D.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETION_REPORT.md  IMPLEMENTATION_GRAPHICS_ML.md  IMPLEMENTATION_NEW_FEATURES.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SHOWCASE.md  ISSUE_RESOLUTION_SUMMARY.md  LIVE_WALLPAPER_IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.vm  OPTIMIZATION_SUMMARY.md  PHASE4_LIMITATIONS_RESOLVED.md  PHASE4_SUMMARY.md  PHASE4_VISUAL_OVERVIEW.md  PHASE5_COMPLETION_REPORT.md  PHASE_COMPLETION_REPORT.md  PLUGIN_IMPLEMENTATION_SUMMARY.md  PLUGIN_TEST_VALIDATION.md  PLUGIN_VISUAL_DEMOS.md  README.md  RELEASE_CANDIDATE_SUMMARY.md  ROADMAP.md  (+14 more)
.github/: Os.agent.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: 3D_4D_5D_COMPLETION_REPORT.md  3D_4D_5D_GUI_IMPLEMENTATION.md  ADVANCED_FEATURES.md  ANDROID_VM_FEATURES.md  API_REFERENCE.md  ATOMIC_OPERATIONS.md  AURORA_LINUX_KERNEL.md  AURORA_VM.md  DESKTOP_ENVIRONMENT_COMPLETION.md  DISPLAY_MANAGER.md  FAQ.md  FEATURES_IMPLEMENTATION_SUMMARY.md  FILESYSTEM_DRIVERS.md  FILE_CACHE_SYSTEM.md  FONT_5X7_ENCODING.md  FONT_MANAGER.md  GETTING_STARTED.md  GRAPHICS_ML_BUILD_GUIDE.md  GUI_COMPARISON.md  GUI_ENHANCEMENTS_V2.md  GUI_VISUAL_CHANGES.md  IMPLEMENTATION_3D_4D_5D.md  INSTALLATION_GUIDE.md  LINUX_VM_FEATURES.md  LIVE_WALLPAPER.md  NETWORK_API.md  NEW_FEATURES.md  NFR_MODULE.md  OPTIONAL_PLUGINS_QUICKREF.md  OPTIONAL_PLUGIN_IMPLEMENTATION.md  OPTIONAL_PLUGIN_SYSTEM.md  PARTITION_PERSISTENCE.md  PERFORMANCE_BENCHMARKS.md  PHASE2_PHASE3_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  PHASE4_LIMITATIONS_RESOLVED.txt  PHASE4_SUMMARY.md  PHASE5_IMPLEMENTATION.md  PLUGIN_IMPLEMENTATION_SUMMARY.md  PLUGIN_QUICKSTART.md  (+11 more)
examples/: example_aurora_vm.c  example_vm_extensions.c
include/: multiboot.h
screenshots/: aurora-os-desktop.ppm  aurora-os-gui-active.ppm  aurora-os-startmenu.ppm
scripts/: create_iso.sh  run_aurora_vm.sh  run_qemu.sh  verify_vesa.sh
tests/: advanced_tests.c  advanced_tests.h  aurora_linux_kernel_tests.c  aurora_linux_kernel_tests.h  aurora_os_vm_integration_test.c  display_manager_test.c  display_manager_test.h  file_cache_tests.c  file_cache_tests.h  filesystem_tests.c  filesystem_tests.h  font_tests.c  font_tests.h  goals_manager_tests.c  goals_manager_tests.h  linux_features_tests.c  linux_features_tests.h  new_features_tests.c  nfr_tests.c  nfr_tests.h  partition_persistence_tests.c  phase5_tests.c  (+17 more)
(+276 files in other folders)
